downgrade to J17 for compatibility tests with SKLTP apps.